fix: ASCII cat whitespace + move @import to top of CSS

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Short+Stack&family=VT323&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -11,4 +13,11 @@ body {
   min-height: 100vh;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Short+Stack&family=VT323&display=swap');
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+#root {
+  min-height: 100vh;
+}
